# scriptum-v2.5

./: .coverage  .dockerignore  .env.example  .gcloudignore  .gitignore  ARCHITECTURE.md  AUDIO_CONVERSION.md  CHANGELOG_AUDIO.md  DEPLOY.md  DEPLOYMENT.md  DEPLOY_GCP.md  DEPLOY_GCP_CONSOLE.md  DEPLOY_INSTRUCTIONS.md  Dockerfile  GCP_DEPLOY_READY.md  Inception.2010.en_metadata.json  Iniciar.command  Parar.command  README.md  api_server.py  api_server_simple.py  app.js  app.py  app_refactored.py  auto_sync.py  compare-times.js  config.py  create_bucket.py  deploy-gcp.sh  deploy.sh  detect_all_offsets.py  detect_framerate.py  extract_mkv.py  fetch_movie.py  fix-missing.js  fix_both_offsets.py  fix_sync.py  full_resync.py  grant_signing_permission.sh  index_old.html  (+43 more)
api/: __init__.py
frontend/: package-lock.json  package.json  tailwind.config.js  test-mkv-upload.sh  test-video-upload.sh
js/: diagnostics.js  dom.js  fsm.js  init.js  navigation.js  state.js  sync.js  video-tools.js
legendasdivx-api/: .env.example  DEPLOY.md  Dockerfile  deploy-to-cloudrun.sh  docker-compose.yml  pyproject.toml
legendasdivx-api/app/: config.py  database.py  main.py
legendasdivx-api/app/adapters/: base.py  legendasdivx.py
legendasdivx-api/app/models/: subtitle.py
legendasdivx-api/app/routers/: download.py  health.py  search.py
legendasdivx-api/app/services/: cache.py  rate_limiter.py  subtitle_service.py
legendasdivx-api/app/utils/: parser.py
legendasdivx-api/data/: subtitles.db
legendasdivx-api/scripts/: build_dataset.py  test_api.py
metadata/: movie_detector.py  (+2 more)
(+107 files in other folders)
